--- a/sparx tool website/index.html
+++ b/sparx tool website/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>SparxTool</title>
 </head>
+
 <body>
     <header>
+        <a>Light Mode: </a>
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+        </label>
         <a onclick="document.getElementsByTagName('main')[0].scrollIntoView({ behavior: 'smooth' })">download</a>
         <a onclick="document.getElementById('features').scrollIntoView({ behavior: 'smooth' })">features</a>
         <a onclick="document.getElementById('about-scroll').scrollIntoView({ behavior: 'smooth' })">about</a>
     </header>
     <main>
         <div id="top-container">
-            <h1>Sparx<div id="blue">Tool</div></h1>
+            <h1>Sparx<div id="blue">Tool</div>
+            </h1>
             <br><br>
             <div id="download-container">
                 try it now:
@@ -53,10 +61,12 @@
             <p>
                 This chrome extension is a tool designed for "Sparx Math" a homework tool used in the UK that doesn't
                 have a dark mode by default. And is generally annoying. This extension aims to fix that. <br>
-                SparxTool has been developed by 2 teenagers based in Cambridge UK. 
+                SparxTool has been developed by 2 teenagers based in Cambridge UK.
             </p>
         </div>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </main>
 </body>
+<script src="scripts.js"></script>
+
 </html>
