--- a/sparx tool website/index.html
+++ b/sparx tool website/index.html
@@ -42,6 +42,9 @@
                     <img src="Images/Screenshot 2025-07-05 183336.png" alt="" width="400px">
                 </li>
                 <li>
+                    NightLight mode - removes blue light for the 3am late homework sessions
+                </li>
+                <li>
                     WhiteBoard to write down notes (In development)
                 </li>
             </ul>
