--- a/sparx tool website/index.html
+++ b/sparx tool website/index.html
@@ -20,7 +20,7 @@
                 try it now:
                 <span id="spacer"></span>
                 <a id="download-button" href="SparxTool.zip" download>
-                    download for windows
+                    download zip
                 </a>
             </div>
             <br><br>
