--- a/sparx tool website/index.html
+++ b/sparx tool website/index.html
@@ -22,6 +22,11 @@
                 <a id="download-button" href="SparxTool.zip" download>
                     download zip
                 </a>
+                <script>
+                    document.getElementById("download-button").addEventListener("click", () => {
+                        document.getElementById('Install').scrollIntoView({ behavior: 'smooth' })
+                    })
+                </script>
             </div>
             <br><br>
         </div>
@@ -54,12 +59,23 @@
             <h2>About</h2>
             <br><br>
             <p>
-                This chrome extension is a tool designed for "Sparx Math" a homework tool used in the UK that doesn't
+                This chromium extension is a tool designed for "Sparx Math" a homework tool used in the UK that doesn't
                 have a dark mode by default. And is generally annoying. This extension aims to fix that. <br>
                 SparxTool has been developed by 2 teenagers based in Cambridge UK. 
             </p>
-        </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        <br><br><br><br><br>
+
+            <h2 id="Install">Install</h2>
+            <br><br>
+            <p>
+                &nbsp;&middot;&nbsp; download the extension <br>
+                &nbsp;&middot;&nbsp; unzip the file <br>
+                &nbsp;&middot;&nbsp; open the desired chromium based browser <br>
+                &nbsp;&middot;&nbsp; go to the exxtension section and enter developer mode <br>
+                &nbsp;&middot;&nbsp; press load unpacked and select the extension folder
+            </p>
+        </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </main>
 </body>
 </html>
